--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "homepage": "https://github.com/Inist-CNRS/node-inist-ark#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.8.1",
     "mocha": "^3.1.2"
   },
   "dependencies": {}
